--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <section class="paragraph2">
-        <section class="header"> <h2>О курсе</h2>
-        </section>
+        <div class="header"> <h2>О курсе</h2>
+        </div>
 
         <div class="course-text">
             <p>Порой фильмы устроены сложнее четырёхтомных <br> романов.
