--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="paragraph2">
-        <div class="header"> <h2>О курсе</h2>
+        <div>class="header"> <h2>О курсе</h2>
         </div>
 
         <div class="course-text">
